# nlpdf

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  mypy_output.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: __init__.py  base.py  config.py  database.py  logging.py  main.py  pdf_engine.py  prompts.py  rate_limit.py  security.py
backend/auth/: cookies.py  csrf.py  dependencies.py  jwt.py  password.py
backend/crud/: document_crud.py  session_crud.py  user_crud.py
backend/models/: __init__.py  document.py  session.py  user.py
backend/routers/: __init__.py  auth_router.py  compress_router.py  llm_router.py  merge_router.py  rotate_router.py  split_router.py
backend/schemas/: __init__.py  auth_schema.py  compress_schema.py  excel_schema.py  llm_schema.py  markdown_schema.py  pptx_schema.py  rotate_schema.py  split_schema.py  word_schema.py
backend/services/: __init__.py  compress_service.py  email_service.py  excel_service.py  llm_executor.py  llm_service.py  markdown_service.py  merge_service.py  operations_executor_service.py  pdf_fonts.py  pptx_service.py  rotate_service.py  split_service.py  turnstile_service.py  word_service.py
backend/utils/: email_utils.py
backend/validators/: __init__.py  page_validators.py  pdf_validators.py  rotation_validators.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx  theme.ts
frontend/src/components/: AppShell.tsx  AuthScreen.tsx  CommandInput.tsx  CookieConsent.tsx  DragDropZone.tsx  ErrorBoundary.tsx  HomePage.tsx  PrivacyPolicy.tsx  ProcessingState.tsx  ProfileMenu.tsx  ResultCard.tsx  Section.tsx  TermsOfService.tsx
frontend/src/components/settings/: ProfileSettings.tsx  SecuritySettings.tsx  SettingsLayout.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
migrations/: env.py
migrations/versions/: 0a1077922642_merge_heads.py  3021c9361920_initial.py  876ce331ae0b_add_otp_fields.py  8ff52253da33_add_otp_purpose_to_user_model.py  a1b2c3d4e5f6_add_security_columns.py  b7d4e8f12a3c_add_document_indexes.py  c7d8e9f0a1b2_add_sessions_and_token_version.py  d2e4f6a8b0c1_widen_otp_code_for_sha256_hash.py  f9fe3a5c84a7_add_name_columns.py
tests/: __init__.py  conftest.py  test_auth.py  test_excel_service.py  test_main.py  test_markdown_service.py  test_pptx_service.py  test_security.py  test_word_service.py
tests/auth/: test_jwt.py  test_password.py
tests/routers/: conftest.py  test_compress_router.py  test_merge_router.py  test_rotate_router.py  test_split_router.py
tests/schemas/: test_schemas.py
tests/services/: test_compress_service.py  test_llm_service.py  test_merge_service.py  test_operations_executor.py  test_rotate_service.py  test_split_service.py
tests/validators/: __init__.py  test_page_validators.py  test_rotation_validators.py
