[tool.poetry]
name = "nlpdf"
version = "0.1.0"
description = "AI-powered PDF processing using natural language"
authors = ["Lokeshwar Reddy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.133.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pypdf = "^6.7.3"
python-multipart = "^0.0.22"
pikepdf = "^10.3.0"
slowapi = "^0.1.9"
huggingface-hub = "^1.4.1"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.13.1"
structlog = "^25.5.0"
sqlalchemy = "^2.0.47"
aioodbc = "^0.5.0"
pyodbc = "^5.2.0"
alembic = "^1.15"
PyJWT = "^2.10"
email-validator = "^2.2"
resend = "^2.23.0"
httpx = "^0.28.1"
argon2-cffi = "^25.1.0"
markdown = "^3.10.2"
xhtml2pdf = "^0.2.17"
python-pptx = "^1.0.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"
black = "^26.1.0"
bandit = "^1.9.4"
pre-commit = "^4.5.1"
ty = "^0.0.18"
mypy = "^1.19.1"
pytest = "^8.0"
pytest-asyncio = "^0.25"
httpx = "^0.28"
Pillow = "^11.0"
aiosqlite = "^0.22"
python-docx = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "N", "W"]

[tool.black]
target-version = ["py313"]

[tool.bandit]
exclude_dirs = ["tests"]
